docs/examples/invalid/semanticErr/extension/enum/InvalidEnumOperation2.wacc
begin
  enum foo is
    A;
    B;
    C;
    D;
  end;

  int x = foo->A + foo->B;
end
